--- a/bluetooth/src/main/res/values/strings.xml
+++ b/bluetooth/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <color name="red">#ffff0000</color>
     <color name="wl_blue">#2878ff</color>
     <color name="wl_gray">#c1c1c1</color>
+    <color name="white">#ffffff</color>
 </resources>
